--- a/genindex.html
+++ b/genindex.html
@@ -77,7 +77,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.assessor">assessor (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.ASSESSOR">ASSESSOR (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.assessors">assessors() (copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment method)</a>
 </li>
@@ -527,7 +527,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.experiment">experiment (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.EXPERIMENT">EXPERIMENT (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.experiments">experiments() (copyxnat.xnat_backend.pyxnat_server.PyXnatSubject method)</a>
 </li>
@@ -555,10 +555,10 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.fetch_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.file">file (copyxnat.config.app_settings.TransferMode attribute)</a>
+      <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.FILE">FILE (copyxnat.config.app_settings.TransferMode attribute)</a>
 
       <ul>
-        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.file">(copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.FILE">(copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -695,7 +695,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.IDS_TO_MAP">IDS_TO_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.in_resource">in_resource (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.IN_RESOURCE">IN_RESOURCE (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.in_resources">in_resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources method)</a>
 </li>
@@ -763,7 +763,7 @@
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">make_project_names_unique() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
-      <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.meta">meta (copyxnat.config.app_settings.TransferMode attribute)</a>
+      <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.META">META (copyxnat.config.app_settings.TransferMode attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.metadata_missing">metadata_missing() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 
@@ -940,7 +940,7 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.out_resource">out_resource (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.OUT_RESOURCE">OUT_RESOURCE (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources.out_resources">out_resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithInOutResources method)</a>
 </li>
@@ -988,7 +988,7 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatProject.progress_update">(copyxnat.xnat.xnat_interface.XnatProject method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.project">project (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.PROJECT">PROJECT (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.project">project() (copyxnat.xnat.xnat_interface.XnatServer method)</a>
 
@@ -1080,7 +1080,7 @@
       </ul></li>
       <li><a href="copyxnat.commands.rebuild_catalog_command.html#copyxnat.commands.rebuild_catalog_command.RebuildCatalogCommand">RebuildCatalogCommand (class in copyxnat.commands.rebuild_catalog_command)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.reconstruction">reconstruction (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.RECONSTRUCTION">RECONSTRUCTION (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.reconstructions">reconstructions() (copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment method)</a>
 </li>
@@ -1146,11 +1146,11 @@
       </ul></li>
       <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.resolve_projects">resolve_projects() (in module copyxnat.api.run_command)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.resource">resource (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.RESOURCE">RESOURCE (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.resources">resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
 </li>
-      <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.rsync">rsync (copyxnat.config.app_settings.TransferMode attribute)</a>
+      <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.RSYNC">RSYNC (copyxnat.config.app_settings.TransferMode attribute)</a>
 </li>
       <li><a href="copyxnat.utils.rsync.html#copyxnat.utils.rsync.ProjectRsync.rsync_project_data">rsync_project_data() (copyxnat.utils.rsync.ProjectRsync method)</a>
 </li>
@@ -1172,13 +1172,13 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.scan">scan (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.SCAN">SCAN (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="versioneer.html#versioneer.scan_setup_py">scan_setup_py() (in module versioneer)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.scans">scans() (copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment method)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.server">server (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.SERVER">SERVER (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory">ServerFactory (class in copyxnat.xnat_backend.server_factory)</a>
 </li>
@@ -1202,7 +1202,7 @@
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.sub_cache">sub_cache() (copyxnat.xnat.copy_cache.CopyCache method)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.subject">subject (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType.SUBJECT">SUBJECT (copyxnat.xnat.xnat_interface.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.subjects">subjects() (copyxnat.xnat_backend.pyxnat_server.PyXnatProject method)</a>
 </li>
@@ -1391,7 +1391,7 @@
 <h2 id="Z">Z</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.zip">zip (copyxnat.config.app_settings.TransferMode attribute)</a>
+      <li><a href="copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode.ZIP">ZIP (copyxnat.config.app_settings.TransferMode attribute)</a>
 </li>
   </ul></td>
 </tr></table>
