--- a/_modules/copyxnat/config/app_settings.html
+++ b/_modules/copyxnat/config/app_settings.html
@@ -49,10 +49,10 @@
 
 <div class="viewcode-block" id="TransferMode"><a class="viewcode-back" href="../../../copyxnat.config.app_settings.html#copyxnat.config.app_settings.TransferMode">[docs]</a><span class="k">class</span> <span class="nc">TransferMode</span><span class="p">(</span><span class="n">Enum</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Defines how resource files (images etc) will be transferred&quot;&quot;&quot;</span>
-    <span class="n">file</span> <span class="o">=</span> <span class="s1">&#39;file&#39;</span>  <span class="c1"># Transfer file-by-file</span>
-    <span class="nb">zip</span> <span class="o">=</span> <span class="s1">&#39;zip&#39;</span>  <span class="c1"># Transfer resource collections as a zip file</span>
-    <span class="n">rsync</span> <span class="o">=</span> <span class="s1">&#39;rsync&#39;</span>  <span class="c1"># Transfer resource files using rsync</span>
-    <span class="n">meta</span> <span class="o">=</span> <span class="s1">&#39;meta&#39;</span>  <span class="c1"># Do not transfer resource files</span></div>
+    <span class="n">FILE</span> <span class="o">=</span> <span class="s1">&#39;file&#39;</span>  <span class="c1"># Transfer file-by-file</span>
+    <span class="n">ZIP</span> <span class="o">=</span> <span class="s1">&#39;zip&#39;</span>  <span class="c1"># Transfer resource collections as a zip file</span>
+    <span class="n">RSYNC</span> <span class="o">=</span> <span class="s1">&#39;rsync&#39;</span>  <span class="c1"># Transfer resource files using rsync</span>
+    <span class="n">META</span> <span class="o">=</span> <span class="s1">&#39;meta&#39;</span>  <span class="c1"># Do not transfer resource files</span></div>
 
 
 <div class="viewcode-block" id="AppSettings"><a class="viewcode-back" href="../../../copyxnat.config.app_settings.html#copyxnat.config.app_settings.AppSettings">[docs]</a><span class="k">class</span> <span class="nc">AppSettings</span><span class="p">:</span>
@@ -63,7 +63,7 @@
                  <span class="n">dry_run</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
                  <span class="n">ignore_datatype_errors</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
                  <span class="n">overwrite_existing</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
-                 <span class="n">transfer_mode</span><span class="o">=</span><span class="n">TransferMode</span><span class="o">.</span><span class="n">file</span><span class="p">,</span>
+                 <span class="n">transfer_mode</span><span class="o">=</span><span class="n">TransferMode</span><span class="o">.</span><span class="n">FILE</span><span class="p">,</span>
                  <span class="n">data_dir</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                  <span class="n">verbose</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
                  <span class="n">skip_existing</span><span class="o">=</span><span class="kc">False</span>
