--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -61,17 +61,17 @@
 <div class="viewcode-block" id="XnatType"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatType">[docs]</a><span class="k">class</span> <span class="nc">XnatType</span><span class="p">(</span><span class="n">Enum</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Describe the type of XNAT item so cleaning can be performed&quot;&quot;&quot;</span>
 
-    <span class="n">server</span> <span class="o">=</span> <span class="s1">&#39;server&#39;</span>
-    <span class="n">project</span> <span class="o">=</span> <span class="s1">&#39;project&#39;</span>
-    <span class="n">subject</span> <span class="o">=</span> <span class="s1">&#39;subject&#39;</span>
-    <span class="n">experiment</span> <span class="o">=</span> <span class="s1">&#39;experiment&#39;</span>
-    <span class="n">scan</span> <span class="o">=</span> <span class="s1">&#39;scan&#39;</span>
-    <span class="n">assessor</span> <span class="o">=</span> <span class="s1">&#39;assessor&#39;</span>
-    <span class="n">reconstruction</span> <span class="o">=</span> <span class="s1">&#39;reconstruction&#39;</span>
-    <span class="n">resource</span> <span class="o">=</span> <span class="s1">&#39;resource&#39;</span>
-    <span class="n">in_resource</span> <span class="o">=</span> <span class="s1">&#39;in_resource&#39;</span>
-    <span class="n">out_resource</span> <span class="o">=</span> <span class="s1">&#39;out_resource&#39;</span>
-    <span class="n">file</span> <span class="o">=</span> <span class="s1">&#39;file&#39;</span></div>
+    <span class="n">SERVER</span> <span class="o">=</span> <span class="s1">&#39;server&#39;</span>
+    <span class="n">PROJECT</span> <span class="o">=</span> <span class="s1">&#39;project&#39;</span>
+    <span class="n">SUBJECT</span> <span class="o">=</span> <span class="s1">&#39;subject&#39;</span>
+    <span class="n">EXPERIMENT</span> <span class="o">=</span> <span class="s1">&#39;experiment&#39;</span>
+    <span class="n">SCAN</span> <span class="o">=</span> <span class="s1">&#39;scan&#39;</span>
+    <span class="n">ASSESSOR</span> <span class="o">=</span> <span class="s1">&#39;assessor&#39;</span>
+    <span class="n">RECONSTRUCTION</span> <span class="o">=</span> <span class="s1">&#39;reconstruction&#39;</span>
+    <span class="n">RESOURCE</span> <span class="o">=</span> <span class="s1">&#39;resource&#39;</span>
+    <span class="n">IN_RESOURCE</span> <span class="o">=</span> <span class="s1">&#39;in_resource&#39;</span>
+    <span class="n">OUT_RESOURCE</span> <span class="o">=</span> <span class="s1">&#39;out_resource&#39;</span>
+    <span class="n">FILE</span> <span class="o">=</span> <span class="s1">&#39;file&#39;</span></div>
 
 
 <div class="viewcode-block" id="XnatBase"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase">[docs]</a><span class="k">class</span> <span class="nc">XnatBase</span><span class="p">(</span><span class="n">abc</span><span class="o">.</span><span class="n">ABC</span><span class="p">):</span>
@@ -351,7 +351,7 @@
     <span class="sd">&quot;&quot;&quot;Base wrapper for resource items&quot;&quot;&quot;</span>
 
 <div class="viewcode-block" id="XnatFileContainerItem.create_from_source"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.create_from_source">[docs]</a>    <span class="k">def</span> <span class="nf">create_from_source</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">src_item</span><span class="p">,</span> <span class="n">xml_cleaner</span><span class="p">):</span>
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">transfer_mode</span> <span class="o">==</span> <span class="n">TransferMode</span><span class="o">.</span><span class="n">zip</span><span class="p">:</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">transfer_mode</span> <span class="o">==</span> <span class="n">TransferMode</span><span class="o">.</span><span class="n">ZIP</span><span class="p">:</span>
             <span class="n">folder_path</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">make_output_path</span><span class="p">()</span>
             <span class="n">local_file</span> <span class="o">=</span> <span class="n">src_item</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">download_zip_file</span><span class="p">(</span><span class="n">folder_path</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
@@ -365,7 +365,7 @@
 <div class="viewcode-block" id="XnatFileContainerItem.export"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.export">[docs]</a>    <span class="k">def</span> <span class="nf">export</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">app_settings</span><span class="p">):</span>
         <span class="n">folder_path</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">make_output_path</span><span class="p">()</span>
 
-        <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">transfer_mode</span> <span class="o">==</span> <span class="n">TransferMode</span><span class="o">.</span><span class="n">zip</span><span class="p">:</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="bp">self</span><span class="o">.</span><span class="n">app_settings</span><span class="o">.</span><span class="n">transfer_mode</span> <span class="o">==</span> <span class="n">TransferMode</span><span class="o">.</span><span class="n">ZIP</span><span class="p">:</span>
             <span class="k">return</span> <span class="n">folder_path</span>
 
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">interface</span><span class="o">.</span><span class="n">download_zip_file</span><span class="p">(</span><span class="n">folder_path</span><span class="p">)</span></div></div>
@@ -375,7 +375,7 @@
     <span class="sd">&quot;&quot;&quot;Base wrapper for file items&quot;&quot;&quot;</span>
 
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;File&#39;</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">file</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">FILE</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;files&#39;</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;files&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[]</span>
@@ -391,7 +391,7 @@
             <span class="n">os</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">local_file</span><span class="p">)</span></div>
 
 <div class="viewcode-block" id="XnatFile.export"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.export">[docs]</a>    <span class="k">def</span> <span class="nf">export</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">app_settings</span><span class="p">):</span>
-        <span class="k">if</span> <span class="ow">not</span> <span class="n">app_settings</span><span class="o">.</span><span class="n">transfer_mode</span> <span class="o">==</span> <span class="n">TransferMode</span><span class="o">.</span><span class="n">file</span><span class="p">:</span>
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">app_settings</span><span class="o">.</span><span class="n">transfer_mode</span> <span class="o">==</span> <span class="n">TransferMode</span><span class="o">.</span><span class="n">FILE</span><span class="p">:</span>
             <span class="k">return</span> <span class="kc">None</span>
 
         <span class="n">folder_path</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">make_output_path</span><span class="p">()</span>
@@ -454,7 +454,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper for access to an XNAT resource&quot;&quot;&quot;</span>
 
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Resource&#39;</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">resource</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">RESOURCE</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;resources&#39;</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;resources&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatFile</span><span class="p">]</span></div>
@@ -464,7 +464,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper for access to an XNAT resource&quot;&quot;&quot;</span>
 
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;In_Resource&#39;</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">in_resource</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">IN_RESOURCE</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;in_resources&#39;</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;in_resources&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatFile</span><span class="p">]</span></div>
@@ -474,7 +474,7 @@
     <span class="sd">&quot;&quot;&quot;Wrapper for access to an XNAT resource&quot;&quot;&quot;</span>
 
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Out_Resource&#39;</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">out_resource</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">OUT_RESOURCE</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;out_resources&#39;</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;out_resources&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatFile</span><span class="p">]</span></div>
@@ -486,7 +486,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Reconstruction&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;reconstructions&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_reconstruction.xml&#39;</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">reconstruction</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">RECONSTRUCTION</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;reconstructions&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatInResource</span><span class="p">,</span> <span class="n">XnatOutResource</span><span class="p">]</span></div>
 
@@ -497,7 +497,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Assessor&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;assessors&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_assessor.xml&#39;</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">assessor</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">ASSESSOR</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;assessors&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatInResource</span><span class="p">,</span> <span class="n">XnatOutResource</span><span class="p">]</span>
 
@@ -519,7 +519,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Scan&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_scan.xml&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;scans&#39;</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">scan</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">SCAN</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;scans&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatResource</span><span class="p">]</span>
 
@@ -553,7 +553,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Experiment&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_session.xml&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;experiments&#39;</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">experiment</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">EXPERIMENT</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;experiments&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatScan</span><span class="p">,</span> <span class="n">XnatAssessor</span><span class="p">,</span> <span class="n">XnatReconstruction</span><span class="p">,</span> <span class="n">XnatResource</span><span class="p">]</span>
 
@@ -592,7 +592,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Subject&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_subject.xml&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;subjects&#39;</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">subject</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">SUBJECT</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;subjects&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatExperiment</span><span class="p">,</span> <span class="n">XnatResource</span><span class="p">]</span></div>
 
@@ -603,7 +603,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Project&#39;</span>
     <span class="n">_xml_filename</span> <span class="o">=</span> <span class="s1">&#39;metadata_project.xml&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;projects&#39;</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">project</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">PROJECT</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;projects&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatSubject</span><span class="p">,</span> <span class="n">XnatResource</span><span class="p">]</span>
 
@@ -620,7 +620,7 @@
     <span class="n">_name</span> <span class="o">=</span> <span class="s1">&#39;Server&#39;</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;servers&#39;</span>
     <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatProject</span><span class="p">]</span>
-    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">server</span>
+    <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">SERVER</span>
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span>
                  <span class="n">factory</span><span class="p">,</span>
