deploy: 87f48fac0ed8c9c7141d171612d733a5e8880665

--- a/_modules/copyxnat/xnat/xml_cleaner.html
+++ b/_modules/copyxnat/xnat/xml_cleaner.html
@@ -89,6 +89,7 @@
         <span class="s1">&#39;{http://nrg.wustl.edu/xnat}scans&#39;</span><span class="p">,</span>
         <span class="s1">&#39;{http://nrg.wustl.edu/xnat}resources&#39;</span><span class="p">,</span>
         <span class="s1">&#39;{http://nrg.wustl.edu/xnat}assessors&#39;</span><span class="p">,</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}reconstructions&#39;</span><span class="p">,</span>
         <span class="s1">&#39;{http://nrg.wustl.edu/xnat}prearchivePath&#39;</span><span class="p">,</span>
         <span class="s1">&#39;{http://nrg.wustl.edu/xnat}sharing&#39;</span>
     <span class="p">}</span>
