deploy: ab100f30fe9ef5241c5ef40bd450aaabb10f656d

--- a/_modules/copyxnat/xnat/xml_cleaner.html
+++ b/_modules/copyxnat/xnat/xml_cleaner.html
@@ -84,6 +84,7 @@
     <span class="p">}</span>
 
     <span class="n">TAGS_TO_DELETE</span> <span class="o">=</span> <span class="p">{</span>
+        <span class="s1">&#39;{http://nrg.wustl.edu/xnat}in&#39;</span><span class="p">,</span>
         <span class="s1">&#39;{http://nrg.wustl.edu/xnat}out&#39;</span><span class="p">,</span>
         <span class="s1">&#39;{http://nrg.wustl.edu/xnat}experiments&#39;</span><span class="p">,</span>
         <span class="s1">&#39;{http://nrg.wustl.edu/xnat}scans&#39;</span><span class="p">,</span>
