--- a/_modules/copyxnat/commands/copy_command.html
+++ b/_modules/copyxnat/commands/copy_command.html
@@ -94,6 +94,12 @@
         <span class="n">dst_copy</span> <span class="o">=</span> <span class="n">xnat_item</span><span class="o">.</span><span class="n">get_or_create_child</span><span class="p">(</span><span class="n">parent</span><span class="o">=</span><span class="n">from_parent</span><span class="p">,</span>
                                                  <span class="n">label</span><span class="o">=</span><span class="n">label</span><span class="p">)</span>
 
+        <span class="k">if</span> <span class="ow">not</span> <span class="n">dst_copy</span><span class="p">:</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">log</span><span class="p">(</span>
+                <span class="s1">&#39;Skipping </span><span class="si">{}</span><span class="s1"> because no destination item could be &#39;</span>
+                <span class="s1">&#39;created.&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">full_name</span><span class="p">))</span>
+            <span class="k">return</span>
+
         <span class="n">already_exists</span> <span class="o">=</span> <span class="n">dst_copy</span><span class="o">.</span><span class="n">exists_on_server</span><span class="p">()</span>
 
         <span class="c1"># Create the item on the destination server</span>
@@ -120,8 +126,7 @@
 
         <span class="c1"># Tasks that are run after the item is created and after recursion to</span>
         <span class="c1"># child items</span>
-        <span class="k">if</span> <span class="n">dst_copy</span><span class="p">:</span>
-            <span class="n">dst_copy</span><span class="o">.</span><span class="n">post_create</span><span class="p">()</span>
+        <span class="n">dst_copy</span><span class="o">.</span><span class="n">post_create</span><span class="p">()</span>
 
     <span class="k">def</span> <span class="nf">_should_create</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">already_exists</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
 
