--- a/_modules/copyxnat/xnat/xnat_interface.html
+++ b/_modules/copyxnat/xnat/xnat_interface.html
@@ -467,7 +467,13 @@
     <span class="n">_xml_id</span> <span class="o">=</span> <span class="n">XnatType</span><span class="o">.</span><span class="n">IN_RESOURCE</span>
     <span class="n">_cache_subdir_name</span> <span class="o">=</span> <span class="s1">&#39;in_resources&#39;</span>
     <span class="n">interface_method</span> <span class="o">=</span> <span class="s1">&#39;in_resources&#39;</span>
-    <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatFile</span><span class="p">]</span></div>
+    <span class="n">_child_types</span> <span class="o">=</span> <span class="p">[</span><span class="n">XnatFile</span><span class="p">]</span>
+
+<div class="viewcode-block" id="XnatInResource.get_or_create_child"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatInResource.get_or_create_child">[docs]</a>    <span class="k">def</span> <span class="nf">get_or_create_child</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">parent</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>  <span class="c1"># pylint: disable=useless-return</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="s1">&#39;CopyXnat is not able to copy in-resources. This &#39;</span>
+                              <span class="s1">&#39;in-resource item </span><span class="si">{}</span><span class="s1"> will be &#39;</span>
+                              <span class="s1">&#39;skipped.&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">label</span><span class="p">))</span>
+        <span class="k">return</span> <span class="kc">None</span></div></div>
 
 
 <div class="viewcode-block" id="XnatOutResource"><a class="viewcode-back" href="../../../copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatOutResource">[docs]</a><span class="k">class</span> <span class="nc">XnatOutResource</span><span class="p">(</span><span class="n">XnatFileContainerItem</span><span class="p">):</span>
