--- a/genindex.html
+++ b/genindex.html
@@ -611,10 +611,16 @@
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.get_label">get_label() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_or_create_child">get_or_create_child() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatInResource.get_or_create_child">get_or_create_child() (copyxnat.xnat.xnat_interface.XnatInResource method)</a>
+
+      <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_or_create_child">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
+      </ul></li>
       <li><a href="versioneer.html#versioneer.get_root">get_root() (in module versioneer)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.get_server">get_server() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 
       <ul>
@@ -623,8 +629,6 @@
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatServer.get_server">(copyxnat.xnat.xnat_interface.XnatServer method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.get_version">get_version() (in module copyxnat.utils.versioning)</a>
 
       <ul>
