--- a/_modules/copyxnat/commands/copy_command.html
+++ b/_modules/copyxnat/commands/copy_command.html
@@ -126,7 +126,8 @@
 
         <span class="c1"># Tasks that are run after the item is created and after recursion to</span>
         <span class="c1"># child items</span>
-        <span class="n">dst_copy</span><span class="o">.</span><span class="n">post_create</span><span class="p">()</span>
+        <span class="k">if</span> <span class="n">should_create</span><span class="p">:</span>
+            <span class="n">dst_copy</span><span class="o">.</span><span class="n">post_create</span><span class="p">()</span>
 
     <span class="k">def</span> <span class="nf">_should_create</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">already_exists</span><span class="p">,</span> <span class="n">xnat_item</span><span class="p">,</span> <span class="n">label</span><span class="p">):</span>
 
